--- a/src/Vistas/Menu.form
+++ b/src/Vistas/Menu.form
@@ -72,6 +72,21 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="jCentroDeVacunacion">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Centro de Vacunacion"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jFormularioCentroVacunacion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Formulario Centro Vacunacion"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jFormularioCentroVacunacionActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
